fixed text align to not be global

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,9 +6,23 @@
 html {
   scroll-behavior: smooth;
 }
+
+
+.row {
+  padding-left: 0;
+  padding-right: 0;
+}
+.grid {
+  padding-left: 0;
+  padding-right: 0;
+}
+.col-md-12 {
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+}
+
 .App {
-  text-align: center;
-  overflow:hidden !important;
+  overflow-x: hidden !important;
 }
 
 h1, h2 {
