--- a/client/src/components/HomeAction/style.css
+++ b/client/src/components/HomeAction/style.css
@@ -16,6 +16,7 @@ background-image: linear-gradient(to right top, #ccebfd, #d3ecfd, #daeefc, #e0ef
      padding-left: 0px;
      display:flex;
      align-items:center;
+     text-align:center;
 }
 
 @media (max-width:767px) {
