--- a/client/src/pages/Homepage/style.css
+++ b/client/src/pages/Homepage/style.css
@@ -64,7 +64,7 @@
     bottom: 20px;
     padding: 10px;
     transition: .6s;
-    /* text-align: center; */
+    text-align: center;
     border: none;
 }
 
